# nmq

./: .gitignore  CMakeLists.txt  README.md  dlist.c  dlist.h  enc.h  ktype.h  nmq.c  nmq.h  test.cpp  test.h  util.c  util.h
test/: test.cpp  test.h
